Fix inline menu collapse animation

--- a/components/style/core/motion.less
+++ b/components/style/core/motion.less
@@ -10,6 +10,6 @@
 .ant-motion-collapse {
   overflow: hidden;
   &-active {
-    transition: height .12s, opacity .12s;
+    transition: height .12s, opacity .12s !important;
   }
 }
